[gd_scene load_steps=11 format=2]

[ext_resource path="res://Image-assets/close_button.png" type="Texture" id=1]
[ext_resource path="res://Image-assets/inventory-bkgr.png" type="Texture" id=2]
[ext_resource path="res://Image-assets/metal-frame.png" type="Texture" id=3]
[ext_resource path="res://Scripts/attackMenu.gd" type="Script" id=4]
[ext_resource path="res://Image-assets/button-five.png" type="Texture" id=5]
[ext_resource path="res://Image-assets/charPanelBkgr.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = SubResource( 3 )

[node name="attackMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attackMenuBkgr" type="TextureRect" parent="."]
visible = false
margin_left = 41.0
margin_top = 124.0
margin_right = 391.0
margin_bottom = 644.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="closeAttackMenu" type="TextureButton" parent="attackMenuBkgr"]
margin_left = 292.0
margin_top = 20.0
margin_right = 195.0
margin_bottom = 56.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="attackMenuBkgr"]
margin_left = 109.0
margin_top = 253.0
margin_right = 241.0
margin_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.189941, 0.118046, 0.0764217, 1 )
text = "Attack ViLLAGE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="movementDuration" type="Label" parent="attackMenuBkgr"]
margin_left = 145.0
margin_top = 440.0
margin_right = 204.0
margin_bottom = 267.0
text = "Duration:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actualDuration" type="Label" parent="attackMenuBkgr/movementDuration"]
margin_left = 23.0
margin_top = 17.0
margin_right = 28.0
margin_bottom = 26.5089
grow_horizontal = 2
grow_vertical = 2
text = "[0]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack" type="TextureButton" parent="attackMenuBkgr"]
margin_left = 101.0
margin_top = 483.0
margin_right = 248.0
margin_bottom = 274.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attackLabel" type="Label" parent="attackMenuBkgr/attack"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="attackMenuBkgr"]
margin_left = 46.0
margin_top = 118.0
margin_right = 311.0
margin_bottom = 436.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="troopsBox" type="VBoxContainer" parent="attackMenuBkgr/ScrollContainer"]
margin_right = 198.0
margin_bottom = 508.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bowman" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox"]
margin_right = 198.0
margin_bottom = 64.0

[node name="portrait" type="TextureRect" parent="attackMenuBkgr/ScrollContainer/troopsBox/bowman"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="details" type="VBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/bowman"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 64.0

[node name="troopName" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/bowman/details"]
margin_right = 130.0
margin_bottom = 14.0
text = "Troop Name"

[node name="owned" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/bowman/details"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 32.0

[node name="troopOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/bowman/details/owned"]
margin_right = 76.0
margin_bottom = 14.0
text = "In garrison :"

[node name="actualOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/bowman/details/owned"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 14.0
text = "[0]"

[node name="bowmenInput" type="SpinBox" parent="attackMenuBkgr/ScrollContainer/troopsBox/bowman/details"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 24 )

[node name="lb" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox"]
margin_top = 74.0
margin_right = 198.0
margin_bottom = 138.0

[node name="portrait" type="TextureRect" parent="attackMenuBkgr/ScrollContainer/troopsBox/lb"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="details" type="VBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/lb"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 64.0

[node name="troopName" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/lb/details"]
margin_right = 130.0
margin_bottom = 14.0
text = "Troop Name"

[node name="owned" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/lb/details"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 32.0

[node name="troopOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/lb/details/owned"]
margin_right = 76.0
margin_bottom = 14.0
text = "In garrison :"

[node name="actualOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/lb/details/owned"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 14.0
text = "[0]"

[node name="lbInput" type="SpinBox" parent="attackMenuBkgr/ScrollContainer/troopsBox/lb/details"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 24 )

[node name="hc" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox"]
margin_top = 148.0
margin_right = 198.0
margin_bottom = 212.0

[node name="portrait" type="TextureRect" parent="attackMenuBkgr/ScrollContainer/troopsBox/hc"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="details" type="VBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/hc"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 64.0

[node name="troopName" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/hc/details"]
margin_right = 130.0
margin_bottom = 14.0
text = "Troop Name"

[node name="owned" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/hc/details"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 32.0

[node name="troopOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/hc/details/owned"]
margin_right = 76.0
margin_bottom = 14.0
text = "In garrison :"

[node name="actualOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/hc/details/owned"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 14.0
text = "[0]"

[node name="hcInput" type="SpinBox" parent="attackMenuBkgr/ScrollContainer/troopsBox/hc/details"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 24 )

[node name="knight" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox"]
margin_top = 222.0
margin_right = 198.0
margin_bottom = 286.0

[node name="portrait" type="TextureRect" parent="attackMenuBkgr/ScrollContainer/troopsBox/knight"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="details" type="VBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/knight"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 64.0

[node name="troopName" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/knight/details"]
margin_right = 130.0
margin_bottom = 14.0
text = "Troop Name"

[node name="owned" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/knight/details"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 32.0

[node name="troopOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/knight/details/owned"]
margin_right = 76.0
margin_bottom = 14.0
text = "In garrison :"

[node name="actualOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/knight/details/owned"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 14.0
text = "[0]"

[node name="knightInput" type="SpinBox" parent="attackMenuBkgr/ScrollContainer/troopsBox/knight/details"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 24 )

[node name="spMan" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox"]
margin_top = 296.0
margin_right = 198.0
margin_bottom = 360.0

[node name="portrait" type="TextureRect" parent="attackMenuBkgr/ScrollContainer/troopsBox/spMan"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="details" type="VBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/spMan"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 64.0

[node name="troopName" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/spMan/details"]
margin_right = 130.0
margin_bottom = 14.0
text = "Troop Name"

[node name="owned" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/spMan/details"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 32.0

[node name="troopOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/spMan/details/owned"]
margin_right = 76.0
margin_bottom = 14.0
text = "In garrison :"

[node name="actualOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/spMan/details/owned"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 14.0
text = "[0]"

[node name="spInput" type="SpinBox" parent="attackMenuBkgr/ScrollContainer/troopsBox/spMan/details"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 24 )

[node name="swMan" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox"]
margin_top = 370.0
margin_right = 198.0
margin_bottom = 434.0

[node name="portrait" type="TextureRect" parent="attackMenuBkgr/ScrollContainer/troopsBox/swMan"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="details" type="VBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/swMan"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 64.0

[node name="troopName" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/swMan/details"]
margin_right = 130.0
margin_bottom = 14.0
text = "Troop Name"

[node name="owned" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/swMan/details"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 32.0

[node name="troopOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/swMan/details/owned"]
margin_right = 76.0
margin_bottom = 14.0
text = "In garrison :"

[node name="actualOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/swMan/details/owned"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 14.0
text = "[0]"

[node name="swInput" type="SpinBox" parent="attackMenuBkgr/ScrollContainer/troopsBox/swMan/details"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 24 )

[node name="lc" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox"]
margin_top = 444.0
margin_right = 198.0
margin_bottom = 508.0

[node name="portrait" type="TextureRect" parent="attackMenuBkgr/ScrollContainer/troopsBox/lc"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="details" type="VBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/lc"]
margin_left = 68.0
margin_right = 198.0
margin_bottom = 64.0

[node name="troopName" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/lc/details"]
margin_right = 130.0
margin_bottom = 14.0
text = "Troop Name"

[node name="owned" type="HBoxContainer" parent="attackMenuBkgr/ScrollContainer/troopsBox/lc/details"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 32.0

[node name="troopOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/lc/details/owned"]
margin_right = 76.0
margin_bottom = 14.0
text = "In garrison :"

[node name="actualOwned" type="Label" parent="attackMenuBkgr/ScrollContainer/troopsBox/lc/details/owned"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 14.0
text = "[0]"

[node name="lcInput" type="SpinBox" parent="attackMenuBkgr/ScrollContainer/troopsBox/lc/details"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 24 )

[node name="pre_attackMenuBkgr" type="TextureRect" parent="."]
margin_left = 56.0
margin_top = 259.0
margin_right = 376.0
margin_bottom = 509.0
rect_min_size = Vector2( 320, 250 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_preMenu" type="TextureButton" parent="pre_attackMenuBkgr"]
margin_left = 271.0
margin_top = 5.0
margin_right = 233.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resourcesLabel" type="Label" parent="pre_attackMenuBkgr"]
margin_left = 86.0
margin_top = 96.0
margin_right = 233.0
margin_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "Possible resources:"
align = 1
valign = 1

[node name="pre_attackBtn" type="TextureButton" parent="pre_attackMenuBkgr"]
margin_left = 86.0
margin_top = 194.0
margin_right = 233.0
margin_bottom = 175.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="pre_attackMenuBkgr/pre_attackBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "Attack"
align = 1
valign = 1
[connection signal="pressed" from="attackMenuBkgr/closeAttackMenu" to="." method="_on_closeAttackMenu_pressed"]
[connection signal="value_changed" from="attackMenuBkgr/ScrollContainer/troopsBox/bowman/details/bowmenInput" to="." method="_on_bowmenInput_value_changed"]
[connection signal="value_changed" from="attackMenuBkgr/ScrollContainer/troopsBox/lb/details/lbInput" to="." method="_on_lbInput_value_changed"]
[connection signal="value_changed" from="attackMenuBkgr/ScrollContainer/troopsBox/hc/details/hcInput" to="." method="_on_hcInput_value_changed"]
[connection signal="value_changed" from="attackMenuBkgr/ScrollContainer/troopsBox/knight/details/knightInput" to="." method="_on_knightInput_value_changed"]
[connection signal="value_changed" from="attackMenuBkgr/ScrollContainer/troopsBox/spMan/details/spInput" to="." method="_on_spInput_value_changed"]
[connection signal="value_changed" from="attackMenuBkgr/ScrollContainer/troopsBox/swMan/details/swInput" to="." method="_on_swInput_value_changed"]
[connection signal="value_changed" from="attackMenuBkgr/ScrollContainer/troopsBox/lc/details/lcInput" to="." method="_on_lcInput_value_changed"]
[connection signal="pressed" from="pre_attackMenuBkgr/close_preMenu" to="." method="_on_close_preMenu_pressed"]
[connection signal="pressed" from="pre_attackMenuBkgr/pre_attackBtn" to="." method="_on_pre_attackBtn_pressed"]
